--- a/contact.css
+++ b/contact.css
@@ -17,7 +17,7 @@ visibility: hidden;
     display: block;
     font-family: inherit;
     font-size: 35px;
-    color: #fff;
+    color: rgb(12, 4, 4);
     line-height: 1.2;
     text-align: left;
     padding-top: 230px;
@@ -72,7 +72,7 @@ visibility: hidden;
     font-family: Montserrat-Bold;
     font-size: 15px;
     line-height: 1.5;
-    color: #fcf8f8;
+    color: #0e0606;
 }
   
   
@@ -125,7 +125,7 @@ visibility: hidden;
     height: 100%;
     padding-left: 30px;
     pointer-events: none;
-    color: #aaaaaa;
+    color: #080707;
     font-size: 15px;
   
     -webkit-transition: all 0.4s;
@@ -135,7 +135,7 @@ visibility: hidden;
   }
   
   .input100:focus + .focus-input100 + .symbol-input100 {
-    color: #846add;
+    color: #050405;
     padding-left: 22px;
   }
   
@@ -178,7 +178,7 @@ visibility: hidden;
   }
   
   .contact100-form-btn:hover {
-    background: #ffffff;
+    background: #080808;
   }
   
   /*------------------------------------------------------------------
