--- a/project.css
+++ b/project.css
@@ -21,7 +21,7 @@ body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 
-  background-image: url('bruno-kelzer-10-Mrr3PYOc-unsplash.jpg');
+  background-image: url('a.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -45,14 +45,14 @@ main{
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(12, 10, 10, 0.5);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  color: #fefefe;
+  color: #070505;
   border-bottom-color: rgba(255, 255, 255, .25);
 }
 
