--- a/contact.css
+++ b/contact.css
@@ -11,13 +11,16 @@ visibility: hidden;
  .contact100-form {
     width: 390px;
   }
+  .text-white{
+    color: rgb(12, 4, 4);
+  }
   
   .contact100-form-title 
   {
     display: block;
     font-family: inherit;
     font-size: 35px;
-    color: rgb(12, 4, 4);
+    color: brown;
     line-height: 1.2;
     text-align: left;
     padding-top: 230px;
@@ -68,11 +71,11 @@ visibility: hidden;
   .input100 {
     display: block;
     width: 100%;
-    background: #2c2c2c;
+    background: #4b3a3a;
     font-family: Montserrat-Bold;
     font-size: 15px;
     line-height: 1.5;
-    color: #0e0606;
+    color: #f7f0f0;
 }
   
   
@@ -157,11 +160,11 @@ visibility: hidden;
     width: 100%;
     height: 50px;
     border-radius: 25px;
-    background: #ffffff;
+    background: #444343;
     font-family: Montserrat-Bold;
     font-size: 15px;
     line-height: 1.5;
-    color: #181717b3;;
+    color: #f8f2f2b3;;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
